# raytracer

./: Cargo.toml  build.rs  flake.nix
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: bvh.rs  camera.rs  dielectric.rs  dims.rs  emissive.rs  extension.rs  lambertian.rs  lib.rs  logic.rs  material.rs  mesh.rs  metallic.rs  new_ray.rs  path.rs  render.rs  scenes.rs  shadow.rs  slang_reflect.rs  tlas.rs
crates/shared/: Cargo.toml
crates/slang/: Cargo.toml
crates/slang/src/: backend.rs  key.rs  lib.rs  representation.rs  slang_program.rs  traversal.rs  webgpu.rs
shaders/: bvh.slang  colour.slang  common.slang  dielectric.slang  emissive.slang  extension.slang  hit.slang  lambertian.slang  light.slang  logic.slang  magic.slang  material.slang  metallic.slang  new_ray.slang  path.slang  ray_extend.slang  render.slang  sample.slang  scene.slang  shade.slang  shadow.slang  tlas.slang
src/: binder.rs  blas.rs  bvh.rs  camera.rs  delta_time.rs  dielectric.rs  emissive.rs  extension.rs  instance.rs  lambertian.rs  lib.rs  main.rs  material.rs  mesh.rs  pathtracer_manager.rs  pathtracer_state.rs  render_resources.rs  scenes.rs  shadow.rs  tlas.rs  winnit.rs
