[workspace]
resolver = "3"
members = ["crates/runner", "crates/shared"]

[workspace.dependencies]
glam = "0.30.9"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
strum = "0.27.2"
wgpu = { version = "27.0.1", features = ["spirv", "vulkan-portability"] }
winit = "0.30.12"
shared = { path = "crates/shared" }
tokio = "1.48.0"
log = "0.4.28"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
wesl = "0.2.0"
image = "0.25.9"
serde = "1.0.228"
serde_json = "1.0.145"
phf = "0.13.1"
phf_codegen = "0.13.1"
