[package]
name = "runner"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
bytemuck.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
futures = { workspace = true, features = ["std"] }
image = { workspace = true }
phf.workspace = true
shared = { workspace = true }
strum = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wesl = { workspace = true }
wgpu = { workspace = true, features = ["spirv", "vulkan-portability"] }
winit = { workspace = true }

[build-dependencies]
wesl.workspace = true
phf_codegen.workspace = true
phf.workspace = true
