[package]
name = "slang"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { workspace = true }
phf_codegen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wgpu.workspace = true

[build-dependencies]
phf.workspace = true
phf_codegen.workspace = true
